Fix overlapping issue in login/signup form

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     gap:20px;
+    margin-top: 20px;
 }
 .footer-logo p{
     color: #383838;
